# voxel-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md  TEXTURES.md
.github/workflows/: ci.yml
bench/: queue_bench.cpp
docs/: textures.md
docs/bench/: README.md  frame_capture.tracy  frame_variance.txt  frame_zones.csv  queue_bench.txt
scripts/: bench_scaling.sh  bench_sweep.sh  bench_variance.sh  capture_clip.sh  capture_orbit.sh  gen_textures.py  run_sanitizers.sh  verify_occlusion.sh
shaders/: basic.frag  basic.vert  bloom_down.frag  bloom_up.frag  blur_separable.frag  bright_extract.frag  crosshair.frag  crosshair.vert  fullscreen.vert  shadow_depth.frag  shadow_depth.vert  sky.frag  sky.vert  tonemap.frag  water.frag  water.vert  wireframe.vert
src/: main.cpp
src/core/: input.cpp  input.h  mpmc_queue.h  profiler.h  thread_pool.cpp  thread_pool.h
src/game/: player.cpp  player.h
src/gfx/: camera.cpp  camera.h  cascaded_shadow_map.cpp  cascaded_shadow_map.h  cube.cpp  cube.h  frustum.cpp  frustum.h  mesh.cpp  mesh.h  post_process.cpp  post_process.h  screenshot.cpp  screenshot.h  shader.cpp  shader.h  shadow_map.cpp  shadow_map.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  water.cpp  water.h  wireframe_cube.cpp  wireframe_cube.h
src/render/: lighting.cpp  lighting.h  passes.cpp  passes.h
src/ui/: debug_hud.cpp  debug_hud.h
src/world/: block.h  chunk.h  chunk_mesh.cpp  chunk_mesh.h  chunk_serialize.cpp  chunk_serialize.h  section_visibility.cpp  section_visibility.h  terrain_gen.cpp  terrain_gen.h  world.cpp  world.h  world_io.cpp  world_io.h
tests/: test_mpmc_queue.cpp  test_world.cpp
textures/: MANIFEST.toml
tools/sanitizer/: ubsan_suppressions.txt
